[package]
name = "img_server"
version = "0.1.0"
authors = ["Pavel Bobylyev <pbobylyev@appliedtech.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false }
image = "0.23.1"